transition fix on testimonial links flickering

--- a/themes/ngbis/src/scss/_content.scss
+++ b/themes/ngbis/src/scss/_content.scss
@@ -95,7 +95,10 @@
     background: $primaryColor;
     color: #fff;
     padding: 3rem 0 0 0;
-
+    a {
+        transition: none !important;
+        transition: color 0.2s ease-in-out !important;
+    }
 }
 
 
